<resources>
    <string name="app_name">Kekema</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="passwordRepeat">Repeat password</string>
    <string name="usernameHint">Email</string>
    <string name="toRegister">Swipe right to register</string>
    <string name="toLogin">Swipe left to login</string>
    <string name="incorrectLogin">Incorrect user or password</string>
    <string name="email">Email</string>
</resources>