<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.RegisterFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="100dp"
            android:src="@drawable/ic_person" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:layout_marginLeft="10dp"
                android:text="@string/username"
                android:textStyle="bold"
                android:textAlignment="center"
                android:textSize="20sp"/>

            <EditText
                android:id="@+id/edit_text_username_register"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:layout_marginLeft="15dp"
                android:hint="@string/usernameHint"
                android:inputType="text"
                android:textAlignment="center"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:layout_marginLeft="10dp"
                android:text="@string/password"
                android:textStyle="bold"
                android:textAlignment="center"
                android:textSize="20sp"/>

            <EditText
                android:id="@+id/edit_text_password_register"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:layout_marginLeft="15dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textAlignment="center"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginLeft="10dp"
                android:text="@string/passwordRepeat"
                android:textStyle="bold"
                android:textAlignment="center"
                android:textSize="20sp"/>

            <EditText
                android:id="@+id/edit_text_repeat_password_register"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="50dp"
                android:hint="@string/passwordRepeat"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:textAlignment="center" />
        </LinearLayout>

        <Button
            android:id="@+id/register_button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:layout_gravity="center_horizontal"
            android:background="@android:color/holo_orange_light"
            android:text="@string/register"/>
    </LinearLayout>
</FrameLayout>